--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,11 @@
 *.log
 *.pot
 *.pyc
-__pycache__/
+pycache/
 local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
