--- a/final-pjt-front/package.json
+++ b/final-pjt-front/package.json
@@ -15,6 +15,7 @@
     "run": "^1.4.0",
     "serve": "^13.0.2",
     "vue": "^2.6.14",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
