--- a/final-pjt-front/package.json
+++ b/final-pjt-front/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "run": "^1.4.0",
     "serve": "^13.0.2",
